--- a/src/scss/blocks/_footer.scss
+++ b/src/scss/blocks/_footer.scss
@@ -12,13 +12,13 @@
 	.container {
 		width: 1386px;
 		height: 656px;
-		left: 27px;
-		top: 0px;
 		position: absolute;
 		justify-content: flex-start;
 		align-items: flex-start;
 		gap: 198px;
-		display: inline-flex
+		display: inline-flex;
+		flex-direction: row-reverse;
+		
 	}
 
 	.footermenu {
@@ -45,10 +45,12 @@
 		align-items: center;
 		gap: 8px;
 	}
+
 	.iconlink img{
 		width: 28px;
 		height: 28px;
 	}
+
 	.title {
 		display: inline-flex;
 		align-items: flex-start;
@@ -64,6 +66,13 @@
 		line-height: 22px; /* 110% */
 	}
 
+	.logo {
+
+		display: inline-flex;
+		align-items: center;
+		gap: 9.342px;
+	}
+
 	menu {
 		display: inline-flex;
 		align-items: flex-start;
@@ -75,6 +84,16 @@
 		flex-direction: column;
 		align-items: flex-start;
 		gap: 40px;
+	}
+
+	h6.bigTitle {
+		color: var(--Neutral-100, #FFF);
+		font-feature-settings: 'liga' off, 'clig' off;
+		font-family: THICCCBOI;
+		font-size: 28px;
+		font-style: normal;
+		font-weight: 800;
+		line-height: 31.764px; /* 113.442% */
 	}
 
 	h6 {
@@ -95,5 +114,19 @@
 		font-style: normal;
 		font-weight: 400;
 		line-height: 20px; /* 111.111% */
+	}
+
+	p {
+		margin-top: 24px;
+		width: 338px;
+		color: var(--Neutral-100, #FFF);
+		font-feature-settings: 'liga' off, 'clig' off;
+		font-family: THICCCBOI;
+		font-size: 18px;
+		font-style: normal;
+		font-weight: 400;
+		line-height: 30px; /* 166.667% */
+
+		opacity: 0.7;
 	}
 }
